src/global.css
@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,500;0,700;1,400&display=swap");
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  input[type="number"]::-webkit-inner-spin-button,
  input[type="number"]::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }
}
* {
  transition: all 0.2s ease-in-out;
}
body {
  @apply bg-primary text-text;
  font-family: "Rubik", sans-serif;
}
::selection {
  @apply bg-white/5 text-secondary;
}
.section {
  @apply rounded-md backdrop-blur-md;
  height: clamp(80vh, 100vh, 1280px);
}

a {
  @apply hover:text-secondary;
}
html {
  scroll-behavior: smooth;
}
.date {
  @apply text-gray-600 dark:text-gray-300;
}
.input-styles {
  @apply w-full p-3 px-6 text-white border rounded-md outline-none placeholder:normal-case focus:outline-none border-white/25 focus:border-white/75 bg-primary/75;
}

::-webkit-scrollbar {
  height: 4px;
  width: 5px;
}
::-webkit-scrollbar-track {
  border-radius: 0px;
  background-color: #000;
}

::-webkit-scrollbar-track:hover {
  background-color: #000;
}

::-webkit-scrollbar-track:active {
  background-color: #000;
}
::-webkit-scrollbar-thumb {
  border-radius: 24px;
  background-color: #fff;
}
::-webkit-scrollbar-thumb:hover {
  background-color: #fff;
}
::-webkit-scrollbar-thumb:active {
  background-color: #fff;
}

